2008-01-12 Jörg Rottland <rottland@users.sourceforge.net>
	* loopback.c: Support for VERIFY <bus> SM added.
	* ddl.*, ddl_nmra.*, srcp-sm.c: Implemented ddl_nmra support for
	srcp 0.8.x (only GL and SM parts have been adapted).
	Re-activated decoder programming; re-activated decoder support
	for protocol type 2 and for more than 28 speed steps. Support
	for more controller functions added (up to 28, tested only from
	F0 to F12). Support for Operations Mode Programming (programming
	on main, POM) added.

2008-01-12 André Schenk <andre@melior.s.bawue.de>
	* ib.*: P50X command set completed.

2008-01-11 Jörg Rottland <rottland@users.sourceforge.net>
	* srcp-command.c, srcp-sm.c: Support for VERIFY <bus> SM added,
	stricter SM parameter control.

2008-01-10 Jörg Rottland <rottland@users.sourceforge.net>
	* srcp-gl.c: Fixed missing attributes of enqueued GLs.

2008-01-07 Guido Scholz <guido.scholz@bayernline.de>
	* srcp-power.*, srcp-command.c: Support for TERM <bus> POWER
	added.

2008-01-06 Guido Scholz <guido.scholz@bayernline.de>
	* srcp-command.c: Support for INIT <bus> POWER added.

2008-01-04 Guido Scholz <guido.scholz@bayernline.de>
	* srcp-error.*, srcp-command.c: »Out of resources« error message
	added.

2008-01-03 Guido Scholz <guido.scholz@bayernline.de>
	* srcp-session.*, srcp-info.*: Queueing info messages is done
	using pipes, information client initiated connection termination
	is detected timely.

2008-01-03 André Schenk <andre@melior.s.bawue.de>
	* loopback.c: Service Mode (SM) for loopback bus added.

2008-01-02 André Schenk <andre@melior.s.bawue.de>
	* srcp-sm.c: Fixed time format for SM messages.

2008-01-02 Guido Scholz <guido.scholz@bayernline.de>
	* README.ibox: Outdated file removed.

2007-12-25 Guido Scholz <guido.scholz@bayernline.de>
	* stdincludes.h, *.c: Obsolete stdincludes.h file removed.
	* io.c, srcp-command.c, clientservice.c, loconet.c: Handle
	writing to socket more savely, also respecting client terminated
	connections. 
